# 0x-copilot

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEOWNERS  Makefile  README.md  SECURITY.md  atlas-drive.mjs  atlas-drive2.mjs  atlas-inspect-old.mjs  atlas-inspect.mjs  atlas-inspect2.mjs  docker-compose.dev.yml  node_modules  package-lock.json  package.json  pyrightconfig.json
ai-backend-src/: README.md  langgraph.json  pyproject.toml
ai-backend-src/docs/: README.md
ai-backend-src/docs/architecture/: package-structure.md
ai-backend-src/docs/prds/: 00-product-vision.md  03-skills-middleware.md  04-dynamic-mcp-loading.md
ai-backend-src/docs/rules/: architecture-principles.md  python-pydantic-rules.md  testing-rules.md
ai-backend-src/docs/specs/: 01-runtime-foundation-spec.md  03-skills-middleware-spec.md  05-context-memory-management-spec.md  07-streaming-and-observability-spec.md
ai-backend-src/docs/testing/: test-fixtures.md  unit-testing-strategy.md
ai-backend-src/src/enterprise_search_ai/: __init__.py  settings.py
ai-backend-src/tests/unit/: conftest.py  fakes.py  test_dynamic_mcp_loading.py  test_dynamic_tool_loading.py  test_runtime_contracts.py  test_runtime_dependencies.py  test_runtime_errors.py  test_runtime_factory.py  test_skills_manifest.py  test_skills_policy.py  test_skills_runtime_factory.py  test_skills_sources.py
services/ai-backend/: .coverage  .env.example  CLAUDE.md  Dockerfile  Oops.rej  README.md  docker-compose.yml  env_example  langgraph.json  pyproject.toml  requirements.txt
services/ai-backend/config/: models_dev_snapshot.json  pricing_overrides.yaml
services/ai-backend/docs/: CLAUDE.md  README.md
services/ai-backend/migrations/: 0001_initial_runtime_persistence.rollback.sql  0001_initial_runtime_persistence.sql  0001_runtime_baseline.rollback.sql  0001_runtime_baseline.sql  0002_run_history_index.rollback.sql  0002_run_history_index.sql  0002_runtime_events_presentation.rollback.sql  0002_runtime_events_presentation.sql  0002_usage_call_attribution.rollback.sql  0002_usage_call_attribution.sql  0003_audit_hardening.rollback.sql  0003_audit_hardening.sql  0003_conversation_project.rollback.sql  0003_conversation_project.sql  0003_usage_call_attribution.rollback.sql  0003_usage_call_attribution.sql  0004_conversation_project.rollback.sql  0004_conversation_project.sql  0004_runtime_run_usage.rollback.sql  0004_runtime_run_usage.sql  0005_conversation_keyset.rollback.sql  0005_conversation_keyset.sql  0005_runtime_model_call_usage.rollback.sql  0005_runtime_model_call_usage.sql  0006_model_pricing.rollback.sql  0006_model_pricing.sql  0006_stage_commit_ledger.rollback.sql  0006_stage_commit_ledger.sql  0007_usage_daily_rollups.rollback.sql  0007_usage_daily_rollups.sql  0008_rls_tenant_isolation.rollback.sql  0008_rls_tenant_isolation.sql  0009_usage_budgets.rollback.sql  0009_usage_budgets.sql  0010_runtime_tool_budgets.rollback.sql  0010_runtime_tool_budgets.sql  0011_field_encryption.rollback.sql  0011_field_encryption.sql  0012_retention_policies.rollback.sql  0012_retention_policies.sql  (+44 more)
services/ai-backend/scripts/: count_unencrypted_rows.py  migrate.py  restore_smoke.py
services/ai-backend/tests/: CLAUDE.md  test_conversation_connector_inheritance.py  test_inbox_producer.py  test_run_inbox_routing.py
services/backend/: .dockerignore  .env.example  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  TESTING.md  dev_personas.yaml  pyproject.toml  requirements.in  requirements.txt
services/backend-facade/: .env.example  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  TESTING.md  pyproject.toml  requirements.in  requirements.txt
services/backend-facade/docs/: README.md
services/backend-facade/tests/: test_adapter_review_routes.py  test_approval_decision_proxy.py  test_artifact_routes_proxy.py  test_connectors_desktop_proxy.py  test_connectors_proxy.py  test_conversations_bucket_stream_proxy.py  test_deployment_profile.py  test_facade_settings.py  test_forwarder.py  test_google_auth_facade.py  test_home_proxy.py  test_inbox_proxy.py  test_library_proxy.py  test_local_models_proxy.py  test_me_routes.py  test_memory_routes_proxy.py  test_new_chat_run_forwarding.py  test_observability.py  test_otel.py  test_palette_routes_proxy.py  test_pending_work_proxy.py  test_projects_proxy.py  test_projects_stream_proxy.py  test_public_route_contract.py  test_reasoning_depth_forwarding.py  test_receipt_export_proxy.py  test_routines_proxy.py  test_run_surfaces_proxy.py  test_saml_facade.py  test_scim_facade.py  test_session_binding.py  test_settings_routes_proxy.py  test_shape_request_proxy.py  test_siwe_facade.py  test_stage_routes_proxy.py  test_surface_view_proxy.py  test_team_routes_proxy.py  test_tenant_isolation_facade.py  test_todos_proxy.py  test_tool_routes_proxy.py  (+1 more)
services/backend/docs/: README.md
services/backend/migrations/: 0001_backend_baseline.rollback.sql  0001_backend_baseline.sql  0001_initial_mcp_skills.rollback.sql  0001_initial_mcp_skills.sql  0002_audit_hardening.rollback.sql  0002_audit_hardening.sql  0003_mcp_auth_connections_unique.rollback.sql  0003_mcp_auth_connections_unique.sql  0004_identity_foundation.rollback.sql  0004_identity_foundation.sql  0004b_seed_system_roles.rollback.sql  0004b_seed_system_roles.sql  0005_sessions.rollback.sql  0005_sessions.sql  0006_oidc.rollback.sql  0006_oidc.sql  0007_local_password.rollback.sql  0007_local_password.sql  0007a_identity_policies.rollback.sql  0007a_identity_policies.sql  0008_rls_tenant_isolation.rollback.sql  0008_rls_tenant_isolation.sql  0011_mfa.rollback.sql  0011_mfa.sql  0012_account_lockouts.rollback.sql  0012_account_lockouts.sql  0013_token_vault_key_id.rollback.sql  0013_token_vault_key_id.sql  0014_saml.rollback.sql  0014_saml.sql  0015_scim.rollback.sql  0015_scim.sql  0016_siem_export.rollback.sql  0016_siem_export.sql  0017_siem_admin_controls.rollback.sql  0017_siem_admin_controls.sql  0018_user_profiles_preferences.rollback.sql  0018_user_profiles_preferences.sql  0019_invitations.sql  (+61 more)
(+3275 files in other folders)
