[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-search-ai"
version = "0.1.0"
description = "Enterprise search AI backend runtime foundation"
requires-python = ">=3.11"
dependencies = [
  "deepagents",
  "langchain",
  "langgraph",
  "pydantic>=2",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
