[build-system]
requires = ["setuptools==82.0.1", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runtime"
version = "0.1.0"
description = "Agent runtime foundation for the enterprise work surface"
requires-python = ">=3.13"
dependencies = [
  "deepagents==0.5.5",
  "ddgs==9.14.1",
  "fastapi==0.136.1",
  "langchain==1.2.16",
  "langchain-community==0.4.1",
  "langchain-openai==1.2.1",
  "langchain-anthropic==1.4.2",
  "langchain-google-genai==4.2.2",
  "langgraph==1.1.10",
  "openai==2.33.0",
  "anthropic==0.97.0",
  "pydantic==2.13.3",
  "python-dotenv==1.2.2",
  "uvicorn==0.46.0",
  "gunicorn==25.3.0",
  "httpx==0.28.1",
  "psycopg[binary,pool]==3.3.3",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../../packages/service-contracts/src"]
asyncio_mode = "auto"

[tool.basedpyright]
include = ["src", "tests"]
extraPaths = ["src", "../../packages/service-contracts/src"]
pythonVersion = "3.11"
