[build-system]
requires = ["setuptools==83.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runtime"
version = "0.1.0"
description = "Agent runtime foundation for the enterprise work surface"
requires-python = ">=3.13"
dependencies = [
  "deepagents==0.6.12",
  "ddgs==9.14.4",
  "fastapi==0.139.2",
  "langchain==1.3.14",
  "langchain-community==0.4.2",
  "langchain-openai==1.3.5",
  "langchain-anthropic==1.4.8",
  "langchain-google-genai==4.2.7",
  "langgraph==1.2.9",
  "openai==2.46.0",
  "anthropic==0.117.0",
  "pydantic==2.13.4",
  "python-dotenv==1.2.2",
  "uvicorn==0.51.0",
  "gunicorn==26.0.0",
  "httpx==0.28.1",
  "psycopg[binary,pool]==3.3.4",
  "pyyaml==6.0.3",
  "opentelemetry-api==1.44.0",
  "opentelemetry-sdk==1.44.0",
  "opentelemetry-exporter-otlp-proto-grpc==1.44.0",
  "opentelemetry-instrumentation-fastapi==0.65b0",
  "opentelemetry-instrumentation-httpx==0.65b0",
  "opentelemetry-instrumentation-psycopg==0.65b0",
  "yoyo-migrations==9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "src",
    "../../packages/service-contracts/src",
    "../../packages/audit-chain/src",
]
asyncio_mode = "auto"

[tool.basedpyright]
include = ["src", "tests"]
extraPaths = [
    "src",
    "../../packages/service-contracts/src",
    "../../packages/audit-chain/src",
]
pythonVersion = "3.11"
