[build-system]
requires = ["setuptools==83.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runtime"
version = "0.1.0"
description = "Agent runtime foundation for the enterprise work surface"
requires-python = ">=3.13"
dependencies = [
  "deepagents==0.6.12",
  "ddgs==9.14.4",
  # AC6 Monty code mode: embedded Python-subset interpreter (experimental).
  # Gated OFF by default via RUNTIME_ENABLE_MONTY; imported only by the
  # Monty adapter, lazily, behind the InterpreterPort.
  "pydantic-monty==0.0.18",
  "fastapi==0.139.2",
  "langchain==1.3.14",
  "langchain-community==0.4.2",
  "langchain-openai==1.3.5",
  "langchain-anthropic==1.4.8",
  "langchain-google-genai==4.2.7",
  "langgraph==1.2.9",
  # SQLite-backed LangGraph checkpointer for the single_user_desktop file store
  # (durable graph/approval continuation across worker restart). Desktop path
  # only; postgres/in-memory keep InMemorySaver. Pulls in aiosqlite.
  "langgraph-checkpoint-sqlite==3.1.0",
  "openai==2.46.0",
  "anthropic==0.117.0",
  "pydantic==2.13.4",
  "python-dotenv==1.2.2",
  "uvicorn==0.51.0",
  "gunicorn==26.0.0",
  "httpx==0.28.1",
  "psycopg[binary,pool]==3.3.4",
  "pyyaml==6.0.3",
  "opentelemetry-api==1.44.0",
  "opentelemetry-sdk==1.44.0",
  "opentelemetry-exporter-otlp-proto-grpc==1.44.0",
  "opentelemetry-instrumentation-fastapi==0.65b0",
  "opentelemetry-instrumentation-httpx==0.65b0",
  "opentelemetry-instrumentation-psycopg==0.65b0",
  "yoyo-migrations==9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "src",
    "../../packages/service-contracts/src",
    "../../packages/audit-chain/src",
]
asyncio_mode = "auto"
# ``evals`` is excluded by default (here) so the standing `pytest` / CI
# `pytest tests` run never invokes a live model. The hermetic replay-based eval
# tests are ordinary unit tests (unmarked) and DO run; only the live-model
# matrix under tests/evals/surfaces carries `@pytest.mark.evals`. Run it
# explicitly with `pytest -m evals` (and `SURFACE_SPEC_MODEL` set).
addopts = "-m 'not evals'"
markers = [
    "postgres: conformance/integration case that requires a live PostgreSQL database (skipped by default in CI).",
    "evals: live-model surface-spec eval matrix (EXCLUDED by default; run with `-m evals` and SURFACE_SPEC_MODEL set). Never runs in CI.",
]

[tool.basedpyright]
include = ["src", "tests"]
extraPaths = [
    "src",
    "../../packages/service-contracts/src",
    "../../packages/audit-chain/src",
]
pythonVersion = "3.11"
