[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-search-backend-facade"
version = "0.1.0"
description = "Product-facing API facade for Enterprise Search"
requires-python = ">=3.13"
dependencies = [
  "fastapi==0.136.1",
  "httpx==0.28.1",
  "pydantic==2.13.4",
  "python-dotenv==1.2.2",
  "uvicorn==0.47.0",
  "opentelemetry-api==1.41.1",
  "opentelemetry-sdk==1.41.1",
  "opentelemetry-exporter-otlp-proto-grpc==1.41.1",
  "opentelemetry-instrumentation-fastapi==0.62b1",
  "opentelemetry-instrumentation-httpx==0.62b1",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../../packages/service-contracts/src"]
