[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-search-backend-facade"
version = "0.1.0"
description = "Product-facing API facade for Enterprise Search"
requires-python = ">=3.13"
dependencies = [
  "fastapi==0.137.1",
  "httpx==0.28.1",
  "pydantic==2.13.4",
  "python-dotenv==1.2.2",
  "uvicorn==0.49.0",
  "opentelemetry-api==1.42.1",
  "opentelemetry-sdk==1.42.1",
  "opentelemetry-exporter-otlp-proto-grpc==1.42.1",
  "opentelemetry-instrumentation-fastapi==0.63b1",
  "opentelemetry-instrumentation-httpx==0.63b1",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../../packages/service-contracts/src"]
