[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "0x-copilot-backend-facade"
version = "0.1.0"
description = "Product-facing API facade for 0xCopilot"
requires-python = ">=3.13"
dependencies = [
  "fastapi==0.139.2",
  "httpx==0.28.1",
  "pydantic==2.13.4",
  "python-dotenv==1.2.2",
  "uvicorn==0.51.0",
  "opentelemetry-api==1.44.0",
  "opentelemetry-sdk==1.44.0",
  "opentelemetry-exporter-otlp-proto-grpc==1.44.0",
  "opentelemetry-instrumentation-fastapi==0.65b0",
  "opentelemetry-instrumentation-httpx==0.65b0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../../packages/service-contracts/src"]
