[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-search-backend"
version = "0.1.0"
description = "Core product backend for Enterprise Search"
requires-python = ">=3.13"
dependencies = [
  "cryptography==47.0.0",
  "fastapi==0.136.1",
  "httpx==0.28.1",
  "psycopg[binary]==3.3.3",
  "psycopg_pool==3.3.1",
  "pydantic==2.13.3",
  "python-dotenv==1.2.2",
  "pyyaml==6.0.3",
  "uvicorn==0.46.0",
  "opentelemetry-api==1.41.1",
  "opentelemetry-sdk==1.41.1",
  "opentelemetry-exporter-otlp-proto-grpc==1.41.1",
  "opentelemetry-instrumentation-fastapi==0.62b1",
  "opentelemetry-instrumentation-httpx==0.62b1",
  "opentelemetry-instrumentation-psycopg==0.62b1",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../../packages/service-contracts/src"]
