[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-search-backend"
version = "0.1.0"
description = "Core product backend for Enterprise Search"
requires-python = ">=3.13"
dependencies = [
  "cryptography==48.0.1",
  "fastapi==0.138.2",
  "httpx==0.28.1",
  "psycopg[binary]==3.3.4",
  "psycopg_pool==3.3.1",
  "pydantic==2.13.4",
  "python-dotenv==1.2.2",
  "pyyaml==6.0.3",
  "uvicorn==0.49.0",
  "opentelemetry-api==1.43.0",
  "opentelemetry-sdk==1.43.0",
  "opentelemetry-exporter-otlp-proto-grpc==1.43.0",
  "opentelemetry-instrumentation-fastapi==0.64b0",
  "opentelemetry-instrumentation-httpx==0.64b0",
  "opentelemetry-instrumentation-psycopg==0.64b0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../../packages/service-contracts/src"]
